# auv-pkg

./: CHANGELOG.rst  CMakeLists.txt  README.md
launch/: auv.launch
src/: GPS_node.cpp  IMU_node.cpp  Path_Planning_node.cpp  Thrusters_node.cpp
